# snail

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp
imgui/backends/: imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.h
shaders/: ibl-pbs.frag  ibl-pbs.vert  pbs.frag  pbs.vert  phong.frag  reflection.frag  reflection.vert  shader.frag  shader.vert  sky.frag  sky.vert  texMap.frag  texMap.vert  texture.frag
src/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Root.cpp  Root.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UI.cpp  UI.h  main.cpp  types.h
